      (useful for rescue-mode).
    - debconf-set: Use the 'none' frontend to avoid the annoying
      screen-clearing effect.
    - debconf-set-selections: Add an --unseen flag, to allow for interactive
      preseeding.
    - Don't output init=* from user-params; supplying it to the first stage
      doesn't in general mean that you want it in the second stage too.
  * Joey Hess
    - Merge Colin's anna-install patch for immediate udeb installation if
      anna is configured. Needs new anna for the new functionality, queue mode
      should continue to work with older annas.
    - Stop setting the frontend to noninteractive for anna-install, getting
      a progress bar and being able to deal with errors is semi-nice.
    - Overload the type field in preseed files; if it's "seen" then
      instead set the seen flag; this allows for preseeding that only changes
      a default value but still leaves the question unseen.
  * Matt Kraai
    - Fix the spelling of "file system".

 -- Colin Watson <cjwatson@debian.org>  Mon,  6 Dec 2004 08:00:31 +0000

debian-installer-utils (1.08) unstable; urgency=low

  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Romanian (ro.po) by Eddy Petrisor
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Wed,  6 Oct 2004 14:35:42 -0400

debian-installer-utils (1.07) unstable; urgency=low

  * Frans Pop
    - Don't add packages that are installed immediately to the queue
      as they shouldn't be processed in base-config's postinst.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Debian Indonesia Team
    - Lithuanian (lt.po) by Kęstutis Biliūnasn
    - Latvian (lv.po) by Aigars Mahinovs