@@ -10,6 +10,8 @@ debian-installer-utils (1.09) UNRELEASED; urgency=low
       preseeding.
     - Don't output init=* from user-params; supplying it to the first stage
       doesn't in general mean that you want it in the second stage too.
+    - Replace di-utils-shell.postinst with a smaller shell implementation,
+      using the DEBCONF_OLD_FD_BASE shell export feature from cdebconf 0.73.
   * Joey Hess
     - Merge Colin's anna-install patch for immediate udeb installation if
       anna is configured. Needs new anna for the new functionality, queue mode
